// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <NewsArticle /> when no action is defined matches snapshot 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      Title
    </h1>
  </header>
  <div
    class="NewsArticle--body"
  >
    <figure
      class="Image NewsArticle--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt="Title"
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle--meta"
    >
      <div
        class="NewsArticle--posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         Posted 
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, 10 October 2017, 6:00 pm"
        >
          3 months ago
        </time>
         by Author
      </div>
      <div
        class="NewsArticleType NewsArticleType-news"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         
        <span
          class="NewsArticleType--label"
        >
          News
        </span>
      </div>
    </section>
    <section
      class="NewsArticle--content"
    >
      <div
        class="NewsArticle-content--text"
      >
        <p>
          Content
        </p>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> when the action is defined, with a route matches snapshot 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      Title
    </h1>
  </header>
  <div
    class="NewsArticle--body"
  >
    <figure
      class="Image NewsArticle--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt="Title"
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle--meta"
    >
      <div
        class="NewsArticle--posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         Posted 
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, 10 October 2017, 6:00 pm"
        >
          3 months ago
        </time>
         by Author
      </div>
      <div
        class="NewsArticleType NewsArticleType-news"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         
        <span
          class="NewsArticleType--label"
        >
          News
        </span>
      </div>
    </section>
    <section
      class="NewsArticle--content"
    >
      <div
        class="NewsArticle-content--text"
      >
        <p>
          Content
        </p>
      </div>
      <div
        class="ButtonBar NewsArticle--action"
      >
        <a
          class="Button isStyled"
          href="/"
        >
          Action
        </a>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <NewsArticle /> when the action is defined, with a url matches snapshot 1`] = `
<article
  class="NewsArticle"
>
  <header
    class="PageHeader"
  >
    <h1>
      Title
    </h1>
  </header>
  <div
    class="NewsArticle--body"
  >
    <figure
      class="Image NewsArticle--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt="Title"
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <section
      class="NewsArticle--meta"
    >
      <div
        class="NewsArticle--posted"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
         Posted 
        <time
          class="DateTime"
          datetime="2017-10-10T18:00:00"
          title="Tuesday, 10 October 2017, 6:00 pm"
        >
          3 months ago
        </time>
         by Author
      </div>
      <div
        class="NewsArticleType NewsArticleType-news"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
         
        <span
          class="NewsArticleType--label"
        >
          News
        </span>
      </div>
    </section>
    <section
      class="NewsArticle--content"
    >
      <div
        class="NewsArticle-content--text"
      >
        <p>
          Content
        </p>
      </div>
      <div
        class="ButtonBar NewsArticle--action"
      >
        <a
          class="Button isStyled"
          href="/"
          rel="noopener"
          target="_blank"
        >
          Action
        </a>
      </div>
    </section>
  </div>
</article>
`;
